--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@vuese/cli": "^2.10.0",
     "axios": "^0.19.2",
     "buefy": "^0.8.18",
+    "chart.js": "^2.9.3",
     "core-js": "^3.6.4",
-    "jquery": "^3.5.1",
+    "hchs-vue-charts": "^1.2.8",
     "leaflet": "^1.6.0",
     "vue": "^2.6.11",
+    "vue-chartjs": "^3.5.0",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
